[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[metadata]
package_name = imf
description = Implementations of various forms of the IMF
long_description = Implementations of various forms of the IMF
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = http://github.com/keflavich/imf
edit_on_github = False
github_project = keflavich/imf

[entry_points]
