[metadata]
name = imf
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/keflavich/imf
description = imf
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = keflavich/imf

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    scipy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
imf = data/*

[tool:pytest]
testpaths = "imf" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    imf/_astropy_init*
    imf/conftest.py
    imf/*setup_package*
    imf/tests/*
    imf/*/tests/*
    imf/extern/*
    imf/version*
    */imf/_astropy_init*
    */imf/conftest.py
    */imf/*setup_package*
    */imf/tests/*
    */imf/*/tests/*
    */imf/extern/*
    */imf/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[pycodestyle]
select = E101,E111,E112,E113,E124,E201,E202,E203,E211,E221,E225,E231,E241,E251,E261,E265,E271,E272,E301,E302,E303,E305,E502,E703,E711,E712,E714,E722,E901,E902,W191,W291,W292,W293,W391

[flake8]
max-line-length = 100
ignore = E226,E402,W503,W504

[entry_points]
